gl51-master/src/test/deca/context/invalid/test_rule2_4.deca
// Description
// nom attribut déjà déclaré

{
    int x;
    int x;
    //PASSED
}
